--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   display: flex;
+  flex-direction: column;
   min-height: 100vh;
   align-items: center;
   justify-content: center;
@@ -37,4 +38,28 @@ button {
   background: none;
   color: white;
   text-decoration: underline;
+}
+
+.NavBar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #f0f0f0; 
+  padding: 10px; 
+  /* display: flex; */
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 2rem;
+  background-color: #3d18e485;
+  color: white;
+  top: 0;
+}
+.NavBar span {
+  display: flex;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: white;
+  justify-content: space-evenly;
+  padding: 10px;
 }
