--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,6 +8,11 @@
   background-image: linear-gradient(79deg, #e916e9, #8020c0 48%, #4418e4);
 }
 
+body{
+  margin-top: 8vh;
+  
+}
+
 .auth-form-container, .login-form, .register-form {
   display: flex;
   flex-direction: column;
@@ -41,6 +46,7 @@ button {
 }
 
 .NavBar {
+  height: 8vh;
   position: fixed;
   top: 0;
   left: 0;
@@ -51,9 +57,10 @@ button {
   justify-content: space-between;
   align-items: center;
   padding: 0 2rem;
-  background-color: #3d18e485;
+  background-image: linear-gradient(180deg, #e916e9, #8020c0 48%, #4418e4);
   color: white;
   top: 0;
+  
 }
 .NavBar span {
   display: flex;
