--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,7 +10,6 @@
 
 body{
   margin-top: 8vh;
-  
 }
 
 .auth-form-container, .login-form, .register-form {
@@ -32,18 +31,24 @@ input {
 
 button {
   border: none;
-  background-color: white;
+  background-color: rgba(0, 167, 218, 0.459);
   padding: 20px;
   border-radius: 10px;
   cursor: pointer;
+  font-weight: bolder;
   color: aquamarine;
+  margin: 10px;
+}
+button:hover {
+  background-color: rgba(0, 167, 218, 0.959);
+  color: white;
 }
 
-.link-btn {
+/* .link-btn {
   background: none;
   color: white;
   text-decoration: underline;
-}
+} */
 
 .NavBar {
   height: 8vh;
@@ -51,9 +56,7 @@ button {
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #f0f0f0; 
   padding: 10px; 
-  /* display: flex; */
   justify-content: space-between;
   align-items: center;
   padding: 0 2rem;
@@ -63,10 +66,23 @@ button {
   
 }
 .NavBar span {
+  text-decoration: none; 
+  color: inherit; 
+  cursor: pointer; 
+  text-decoration: none;
   display: flex;
   font-size: 1.5rem;
   font-weight: bold;
-  color: white;
+  color: #1e84bf;
   justify-content: space-evenly;
   padding: 10px;
+}
+.NavBar span:hover {
+  color: #1e70bf;
+}
+.LogoutButton{
+  background: none;
+  /* color: rgba(255, 255, 255, 0.897); */
+  /* text-decoration: underline; */
+  cursor: pointer;
 }
