--- a/client/src/App.css
+++ b/client/src/App.css
@@ -135,5 +135,32 @@ button:hover {
   border-radius: 10px;
   background-color: rgba(0, 167, 218, 0.26);
   color: white;
+  resize: vertical;
 }
+
+.ForumPost {
+  display: flex;
+  flex-direction: column;
+  margin: 0.5rem;
+  padding: 1rem;
+  /* border: 1px solid rgb(255, 255, 255); */
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.26);
+  color: white;
+}
+.ForumPost h1 {
+  /* font-size: 1.5rem; */
+  font-weight: bolder;
+  color: #ffffff;
+  margin-bottom: 0.5rem;
+}
+
+.ForumPost h3{
+  margin-top: 0;
+}
+
+.ForumPost button {
+  margin-top: 0;
+}
+
 
